option gwt_package = "com.inmobi.conduit.visualization.shared";

message Request {
	optional GraphDataRequest graphDataRequest = 1;
}

message GraphDataRequest {
	optional string stream = 1;
	optional string colo = 2;
	optional string startTime = 3;
	optional string endTime = 4;
}

message Response {
	optional TopologyDataResponse topologyDataResponse = 1;
	optional LoadMainPanelResponse loadMainPanelResponse = 2;
	optional TimeLineGraphResponse timeLineGraphResponse = 3;
	optional TierLatencyResponse tierLatencyResponse = 4;
}

message TimeLineGraphResponse {
	optional string jsonString = 1;
	optional GraphDataRequest requestParams = 2;
}

message TopologyDataResponse {
	optional string jsonString = 1;
	optional GraphDataRequest requestParams = 2;
}

message TierLatencyResponse {
	repeated TierLatencyObj tierLatencyObjList = 1;
	optional GraphDataRequest requestParams = 2;
}

message TierLatencyObj {
	optional string tier = 1;
	optional int32 latency = 2;
}

message LoadMainPanelResponse {
	repeated string stream = 1;
	repeated string cluster = 2;
	optional ClientConfiguration clientConfig = 3;
}

message ClientConfiguration {
	optional string publisherSla = 1;
	optional string agentSla = 2;
	optional string vipSla = 3;
	optional string collectorSla = 4;
	optional string hdfsSla = 5;
	optional string percentileForSla = 6;
	optional string percentageForLoss = 7;
	optional string percentageForWarn = 8;
	optional string maxStartTime = 9;
	optional string maxTimeRangeInt = 10;
	optional string warnLossThresholdDiff = 11;
	optional string localSla = 12;
	optional string mergeSla = 13;
	optional string mirrorSla = 14;
	optional string rolleduptilldays = 15;
	optional string timeTickInterval = 16;
}
